--- a/login window/Base.lproj/Main.storyboard
+++ b/login window/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
@@ -14,54 +14,56 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="login_window" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="q2K-MJ-BbV">
-                                <rect key="frame" x="0.0" y="0.0" width="430" height="898"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logIn" translatesAutoresizingMaskIntoConstraints="NO" id="B2U-2H-kpB">
-                                <rect key="frame" x="-330" y="119.00000000000001" width="1090" height="162.33333333333337"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="B2U-2H-kpB" secondAttribute="height" multiplier="490:73" id="Twp-tt-h9z"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="q2K-MJ-BbV">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Log In" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XpX-FD-B7r">
-                                <rect key="frame" x="60" y="341.33333333333331" width="310" height="34"/>
+                                <rect key="frame" x="70" y="135" width="180" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="hUQ-e3-THY"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="username"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Wd-MM-MI3">
-                                <rect key="frame" x="60" y="410.33333333333331" width="310" height="34"/>
+                                <rect key="frame" x="70" y="204" width="180" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="Ogf-Bb-Cis"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                             </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logIn" translatesAutoresizingMaskIntoConstraints="NO" id="edS-KD-pa3">
+                                <rect key="frame" x="130" y="-5" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="edS-KD-pa3" secondAttribute="height" multiplier="1:1" id="X0h-Yd-Pht"/>
+                                    <constraint firstAttribute="width" secondItem="edS-KD-pa3" secondAttribute="height" multiplier="1:1" id="sXe-hO-sdu"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="0Nj-hh-YpQ"/>
-                            <constraint firstItem="B2U-2H-kpB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-330" id="2GA-yY-QBc"/>
-                            <constraint firstItem="7Wd-MM-MI3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8UL-Rk-vbW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XpX-FD-B7r" secondAttribute="trailing" constant="60" id="Cag-hq-BUp"/>
-                            <constraint firstItem="B2U-2H-kpB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cfr-Xg-YuD"/>
-                            <constraint firstItem="XpX-FD-B7r" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EVc-wF-mWI"/>
-                            <constraint firstItem="7Wd-MM-MI3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="EnM-Uw-zmd"/>
-                            <constraint firstItem="7Wd-MM-MI3" firstAttribute="top" secondItem="XpX-FD-B7r" secondAttribute="bottom" constant="35" id="FQt-Jo-tns"/>
-                            <constraint firstItem="XpX-FD-B7r" firstAttribute="top" secondItem="B2U-2H-kpB" secondAttribute="bottom" constant="60" id="FZi-YP-ILR"/>
-                            <constraint firstItem="B2U-2H-kpB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="S1j-VU-DJo"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Wd-MM-MI3" secondAttribute="trailing" constant="60" id="WN0-nP-0C0"/>
-                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bw9-8H-slb"/>
-                            <constraint firstAttribute="trailing" secondItem="B2U-2H-kpB" secondAttribute="trailing" constant="-330" id="in4-ws-WWP"/>
-                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="jCe-z7-qci"/>
-                            <constraint firstItem="XpX-FD-B7r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="suj-ZE-HHe"/>
-                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tOz-Yn-oE5"/>
+                            <constraint firstItem="7Wd-MM-MI3" firstAttribute="top" secondItem="XpX-FD-B7r" secondAttribute="bottom" constant="35" id="09r-gj-COd"/>
+                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1vc-OG-z47"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="edS-KD-pa3" secondAttribute="trailing" constant="130" id="9tJ-Dl-duw"/>
+                            <constraint firstItem="XpX-FD-B7r" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CZ2-MX-IQ4"/>
+                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="daF-9x-rmv"/>
+                            <constraint firstAttribute="bottom" secondItem="q2K-MJ-BbV" secondAttribute="bottom" id="fZk-Z0-IPu"/>
+                            <constraint firstItem="edS-KD-pa3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="i6p-J6-469"/>
+                            <constraint firstItem="7Wd-MM-MI3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ifF-U4-6X2"/>
+                            <constraint firstItem="XpX-FD-B7r" firstAttribute="top" secondItem="edS-KD-pa3" secondAttribute="bottom" constant="80" id="m87-YI-3EV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7Wd-MM-MI3" secondAttribute="bottom" constant="330" id="p6H-m3-RIT"/>
+                            <constraint firstItem="q2K-MJ-BbV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="p7Y-bT-Rnf"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="45" y="-2.112676056338028"/>
+            <point key="canvasLocation" x="39.375" y="-5.28169014084507"/>
         </scene>
     </scenes>
     <resources>
