--- a/login window/Base.lproj/Main.storyboard
+++ b/login window/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="login_window" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="login_window" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,15 +20,15 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="q2K-MJ-BbV">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Log In" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XpX-FD-B7r">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter yor name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XpX-FD-B7r">
                                 <rect key="frame" x="70" y="135" width="180" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="hUQ-e3-THY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="username"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="name"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Wd-MM-MI3">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="7Wd-MM-MI3">
                                 <rect key="frame" x="70" y="204" width="180" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="180" id="Ogf-Bb-Cis"/>
@@ -43,11 +43,31 @@
                                     <constraint firstAttribute="width" secondItem="edS-KD-pa3" secondAttribute="height" multiplier="1:1" id="sXe-hO-sdu"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdO-g3-JLH">
+                                <rect key="frame" x="100" y="371.5" width="120" height="35.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="BXi-rz-O2j"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log In">
+                                    <color key="titleColor" systemColor="systemGray6Color"/>
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <buttonConfiguration key="configuration" style="filled" title="Log In">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
+                                    <color key="baseForegroundColor" systemColor="systemGray6Color"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DQ7-UI-SfM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="7Wd-MM-MI3" firstAttribute="top" secondItem="XpX-FD-B7r" secondAttribute="bottom" constant="35" id="09r-gj-COd"/>
+                            <constraint firstItem="hdO-g3-JLH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0JG-ST-xBE"/>
                             <constraint firstItem="q2K-MJ-BbV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1vc-OG-z47"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="edS-KD-pa3" secondAttribute="trailing" constant="130" id="9tJ-Dl-duw"/>
                             <constraint firstItem="XpX-FD-B7r" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CZ2-MX-IQ4"/>
@@ -55,11 +75,16 @@
                             <constraint firstAttribute="bottom" secondItem="q2K-MJ-BbV" secondAttribute="bottom" id="fZk-Z0-IPu"/>
                             <constraint firstItem="edS-KD-pa3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="i6p-J6-469"/>
                             <constraint firstItem="7Wd-MM-MI3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ifF-U4-6X2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hdO-g3-JLH" secondAttribute="bottom" constant="161" id="lgu-7J-fkd"/>
                             <constraint firstItem="XpX-FD-B7r" firstAttribute="top" secondItem="edS-KD-pa3" secondAttribute="bottom" constant="80" id="m87-YI-3EV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7Wd-MM-MI3" secondAttribute="bottom" constant="330" id="p6H-m3-RIT"/>
                             <constraint firstItem="q2K-MJ-BbV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="p7Y-bT-Rnf"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nameTextField" destination="XpX-FD-B7r" id="zwg-2L-DJT"/>
+                        <outlet property="passwordTextField" destination="7Wd-MM-MI3" id="yMb-Zv-qqZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -71,6 +96,9 @@
         <image name="logIn" width="980" height="982"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
